<resources>
    <string name="app_name">Friend Zone</string>

    <!-- Nom activité -->
    <string name="app_profil">Profil</string>
    <string name="app_liste">Liste des contacts</string>
    <string name="app_ajout">Ajouter un ami</string>
    <string name="app_inscription">Inscription</string>
    <string name="app_connexion">Connexion</string>
    <string name="app_share_location">Partager un lieu</string>

    <!-- Strings related to login -->
    <string name="prompt_pseudo">Pseudo</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="prompt_nom_lieu">Nom</string>
    <string name="prompt_ville_lieu">Ville</string>
    <string name="prompt_adresse_lieu">Adresse</string>
    <string name="prompt_cp_lieu">Code postal</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_share_location">Partager ce lieu !</string>

    <string name="error_invalid_pseudo">Pseudo incorrect</string>
    <string name="error_invalid_password_short">Mot de passe trop court</string>
    <string name="error_invalid_password">Mot de passe trop incorrect</string>
    <string name="error_incorrect_password">Mot de passe incorrect</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_incorrect_session">Mot de passe ou identifiant incorrect</string>

    <!-- Profil activity -->
    <string name="name">Nom</string>
    <string name="firstName">Prénom</string>

    <!--Signin Activity-->
    <!-- Nom des champs et des boutons -->
    <string name="pseudo">Pseudo</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="signinBtn">S\'inscrire</string>
    <string name="connexionBtn">Se connecter</string>

    <!-- Texte pour les messages d'erreur -->
    <string name="nameError">Veuillez saisir un nom valide</string>
    <string name="firstNameError">Veuillez saisir un prénom valide</string>
    <string name="pseudoError">Veuillez saisir un pseudo valide</string>
    <string name="phoneError">Veuillez saisir un numéro de téléphone valide</string>
    <string name="phoneErrorLength">Le numéro de téléphone doit contenir 10 chiffres!</string>
    <string name="emailError">Veuillez saisir une adresse mail valide</string>
    <string name="passwordError">Veuillez saisir un mot de passe valide. Il doit contenir au moins une majuscule,
    une miniscule, un chiffre, et doit être composé d\'au moins 6 caractères</string>
    <string name="title_activity_sign_in_maps">Map</string>
    <string name="title_activity_maps">Map</string>

    <!-- Liste d'amis -->
    <string name="partager_position">Partager position</string>
    <string name="title_activity_map">Carte des amis</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Menu de navigation -->
    <string name="nav_lstContact">Liste des contacts</string>
    <string name="nav_addFriend">Ajouter un ami</string>
    <string name="nav_liste_location">Liste lieux partagés</string>
    <string name="nav_share_location">Partager un lieu</string>
    <string name="nav_profil">Profil</string>

</resources>
