<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Profil"
            android:icon="@drawable/profil"
            android:title="@string/nav_profil" />
        <item
            android:id="@+id/listeContact"
            android:icon="@drawable/liste"
            android:title="@string/nav_lstContact" />
        <item
            android:id="@+id/addAmi"
            android:icon="@drawable/add"
            android:title="@string/nav_addFriend" />
        <item
            android:id="@+id/liste_location"
            android:icon="@drawable/city"
            android:title="@string/nav_liste_location" />
        <item
            android:id="@+id/share_location"
            android:icon="@drawable/location"
            android:title="@string/nav_share_location" />
        <!--<item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />-->
    </group>

    <item android:title="Option">
        <menu>
            <item
                android:id="@+id/Deconnexion"
                android:icon="@drawable/signout"
                android:title="Déconnexion" />
            <!--é<item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />-->
        </menu>
    </item>

</menu>
